# NonLinearDynamics

./: CMakeLists.txt  main.cpp
src/gui_dashboard/: dashboard.hpp
src/gui_dashboard/dashboard_ops/: app_primitives.hpp  components.hpp
src/integrators/: multistep_integrator.hpp
src/sqp_solvers/: newton_method.hpp
src/systems/: concrete_systems.hpp  system_base.hpp
src/utils/: util.hpp
